# netbox_cria_device

./: pyproject.toml  requirements.txt  setup.py
netbox_cria_device/: __init__.py  forms.py  template_extensions.py  urls.py  views.py
netbox_cria_device/templates/netbox_cria_device/: device_add_button.html  device_add_custom.html
