[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox_cria_device"
version = "1.0"
description = "Plugin para criação customizada de dispositivos."
authors = [
  { name="Luan" },
]
license = { text="Apache 2.0" }
requires-python = ">=3.8"
# Adicione outras dependências aqui se o seu plugin precisar de bibliotecas extras
# dependencies = [
#   "requests",
# ]

[tool.setuptools.packages.find]
# Procura automaticamente pelo pacote python na subpasta 'netbox_cria_device'
where = ["."]